tests/fail/semantics/ownership_returned_borrow_reserved/main.kira
struct Mesh {
    let id: Int
}

function first(mesh: borrow Mesh) -> borrow Mesh {
    return mesh
}

@Main
function main() {
    let mesh = Mesh { id: 1 }
    first(mesh)
    return
}
